# omni-agi

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  installed.txt  requirements.txt  test_rpc_connection.py
config/: agent_config.yaml  personality.yaml  prompts.yaml  settings.yaml
config/analytics/: metrics_config.yaml  reporting_config.yaml
config/investment/: risk_config.yaml  strategy_config.yaml
config/tokenomics/: distribution_config.yaml  token_config.yaml
scripts/: deploy.sh  setup.sh  start.sh
src/: agent.py  moccasin.toml  prompts.py
src/blockchain/ethereum/: __init__.py  eth_block_tool.py  main.py  transactions.py  wallet.py
src/blockchain/solana/: constants.py  tokens.py  trades.py  wallet.py
src/cognition/: __init__.py  context.py  goals.py  learning.py  memory.py  reasoning.py
src/communication/interfaces/: api.py  chat.py  webhooks.py
src/communication/social/: __init__.py  analytics.py  discord.py  twitter.py
src/communication/twitter_langchain/: twitter_api_wrapper.py  twitter_tool.py  twitter_toolkit.py
src/community/content/: __init__.py  generator.py  scheduler.py
src/config/: agent_config.py
src/core/cognition/: context.py  (+5 more)
src/models/: __init__.py  claude.py  groq.py  prompts.py
src/personality/: behavior.py  emotions.py
src/scraper/: pyproject.toml
src/scraper/scraper/extractor/: crypto_extractor.py
src/scraper/scraper/iterator/: data_iterator.py
src/utils/: __init__.py  config.py  database.py  error_handler.py  errors.py  logger.py  logging_config.py  security.py
tests/: test_rpc_connection.py
(+62 files in other folders)
