[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Jamie Chojnacki <chojnacki.jamie@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
requests = "2.32.3"
pandas = "2.2.3"
pre-commit = "4.0.1"
black = "24.10.0"

[tool.poetry.dev-dependencies]
pytest = "8.3.4"
pytest-cov = "6.0.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
